--- a/index.html
+++ b/index.html
@@ -3,11 +3,190 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/normalize.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
 
+      <!-- ==== header ======-->
+
+
+    <header class="header background__color_light">
+      <div class="logo logo_place_header">
+        <img src="./images/logo_place_header.svg" alt="Яндекс практикум">
+      </div>
+      <h1 class="header__title header__title__text font-weight_bold">Научиться учиться</h1>
+      <div class="header__subtitle">
+        <p class="header__subtitle__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link font-color_blue">Узнать
+          &#8594;</a></p>
+      </div>
+        <img class="header__main-illustration" src="./images/header-image.png" alt="header-image">
+      <div class="header__square-pic">
+      </div>
+    </header>
+
+    <main class="main">
+
+      <!-- ==== description ======-->
+
+      <section class="description">
+        <div class="two-columns">
+            <h5 class="two-columns__brief font-color_blue">Главные проблемы в обучении</h5>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="font-weight_bold">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- ==== digits ======-->
+
+      <section class="digits">
+          <h2 class="section-title font-weight_bold">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учебу и мозг</h3>
+        <div class="table">
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">86 миллиардов</li>
+            <li class="table__text">Число нейронов в мозге человека</li>
+          </ul>
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">2,1 миллиарда</li>
+            <li class="table__text">Число нуждающихся в повышении квалификации</li>
+            <li class="table__text">Всемирный Банк, 2017</p>
+          </ul>
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">1000 терабайт</li>
+            <li class="table__text">Объем памяти человека</li>
+          </ul>
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">500 триллионов</li>
+            <li class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</li>
+          </ul>
+        </div>
+        <div class="table">
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">420 миллионов</li>
+            <li class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</li>
+            <li class="table__text">Всемирный Банк, 2017</li>
+          </ul>
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">17–20 лет</li>
+            <li class="table__text">Пик обучаемости</li>
+          </ul>
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">1885 год</li>
+            <li class="table__text">Открытие кривой забывания</li>
+          </ul>
+          <ul class="table__cell list-style_none">
+            <li class="table__heading font-weight_bold">1889 год</li>
+            <li class="table__text">Открытие условного рефлекса</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- ==== feynman ======-->
+
+      <section class="feynman background__color_light">
+        <h2 class="feynman__title font-weight_bold">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link font-color_blue" href="#">Подробнее &#8594;</a>
+        <div class="feynman__photo"></div>
+
+      </section>
+
+
+      <!-- ==== kaufman ======-->
+
+      <section class="kaufman background__color_dark">
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <div class="table">
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">1</li>
+            <li class="table__text">Выберите привлекательный проект.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">2</li>
+            <li class="table__text">Сосредоточьтесь на каком-то одном навыке.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">3</li>
+            <li class="table__text">Определите целевой уровень мастерства.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">4</li>
+            <li class="table__text">Разбейте навык на элементы.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">5</li>
+            <li class="table__text">Приготовьте всё необходимое для занятий.</li>
+          </ul>
+        </div>
+        <div class="table">
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">6</li>
+            <li class="table__text">Устраните препятствия для занятий.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">7</li>
+            <li class="table__text">Выделите специальное время для занятий.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">8</li>
+            <li class="table__text">Создайте быстрые петли обратной связи.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">9</li>
+            <li class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</li>
+          </ul>
+          <ul class="table__cell table__cell_theme_dark list-style_none">
+            <li class="table__heading font-weight_bold">10</li>
+            <li class="table__text">Уделяйте внимание количеству и скорости.</li>
+          </ul>
+        </div>
+        <div class="kaufman__triangle">
+          <div class="kaufman__triangle__photo"></div>
+        </div>
+      </section>
+    </main>
+
+      <!-- ==== footer ======-->
+
+    <footer class="footer background__color_dark">
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <div class="logo logo_place_footer">
+            <img src="./images/logo_place_footer.svg" alt="Яндекс практикум">
+          </div>
+          <p class="footer__autor">&copy; Виктор Абанькин</p>
+        </div>
+        <div class="footer__columns_content_info">
+          <h3 class="footer__column-heading font-weight_bold">О практикуме</h3>
+          <ul class="footer__column-links list-style_none">
+            <li><a class="footer__column-links_color_white" href="#">Главная</a></li>
+            <li><a class="footer__column-links_color_white" href="#">Концепция</a></li>
+            <li><a class="footer__column-links_color_white" href="#">Наставники</a></li>
+          </ul>
+        </div>
+        <div class="footer__columns_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <ul class="footer__column-links list-style_none">
+            <li>
+              <a class="footer__column-links_color_white" href="#"><img class="footer__column-links_logo" src="./images/youtube-icon.svg" alt="лого YouTube">YouTube</a>
+            </li>
+            <li>
+              <a class="footer__column-links_color_white" href="#"><img class="footer__column-links_logo" src="./images/vk_color_white.svg" alt="лого YouTube">ВКонтакте</a>
+            </li>
+            <li>
+              <a class="footer__column-links_color_white" href="#"><img class="footer__column-links_logo" src="./images/tiktok-icon.svg" alt="лого YouTube">TikTok</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 </html>
