Готовый проект перед отправкой

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <ul class="table__cell list-style_none">
             <li class="table__heading font-weight_bold">2,1 миллиарда</li>
             <li class="table__text">Число нуждающихся в повышении квалификации</li>
-            <li class="table__text">Всемирный Банк, 2017</p>
+            <li class="table__text">Всемирный Банк, 2017</li>
           </ul>
           <ul class="table__cell list-style_none">
             <li class="table__heading font-weight_bold">1000 терабайт</li>
