--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p class="header__subtitle__text">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="#" class="header__link font-color_blue">Узнать
           &#8594;</a></p>
       </div>
-        <img class="header__main-illustration" src="./images/header-image.png" alt="header-image">
+        <img class="header__main-illustration" src="./images/header-image.png" alt="фото для шапки">
       <div class="header__square-pic">
       </div>
     </header>
