--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/normalize.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -20,7 +20,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в
         своей жизни? <a href="#" class="header__link">Узнать &#8594;</a>
       </p>
-      <div class="header__square-pic">
+      <div class="header__square-pic rotation">
       </div>
       <img class="header__main-illustration" src="./images/header-image.png" alt="фото для шапки">
     </header>
@@ -44,6 +44,80 @@
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
+      </section>
+
+      <!-- ==== techniques ======-->
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <ul class="cards list">
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="фото книги">
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="фото статуи">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="фото транспортного узла">
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="фото помещения с окнами">
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
+          </li>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="фото стопки книг">
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
+          </li>
+          <li class="cards__item"></li>
+        </ul>
+      </section>
+
+      <!-- ==== video ======-->
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
+            frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU"
+            frameborder="0" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <!-- ==== oakley ======-->
+
+      <section class="oakley">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным
+              гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да
+              так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И
+              тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши
+              добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- ==== feynman ======-->
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
       </section>
 
       <!-- ==== digits ======-->
@@ -89,12 +163,22 @@
         </ul>
       </section>
 
-      <!-- ==== feynman ======-->
+      <!-- ==== khan ======-->
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#" target="_blank">Подробнее &#8594;</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Салман Хан</p>
+          <h2 class="khan__title">Весь мир - школа</h2>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+            миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги">
+            <a class="khan__buy-link" href="#" target="_blank">Купить книгу &#8594;</a>
+          </div>
+        </div>
       </section>
 
       <!-- ==== kaufman ======-->
@@ -144,10 +228,31 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle">
+        <div class="kaufman__triangle rotation">
         </div>
       </section>
     </main>
+
+    <!-- ==== resources ======-->
+
+    <section class="resources">
+      <h2 class="section-title">Полезные ресурсы</h2>
+      <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+      <nav class="resources__logo-zone">
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="логотип Арзамас">
+        </a>
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="логотип Н1">
+        </a>
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="логотип Стрелка">
+        </a>
+        <a class="resources__link" href="#">
+          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="логотип Полка">
+        </a>
+      </nav>
+    </section>
 
     <!-- ==== footer ======-->
 
